--- a/material/views/views.xml
+++ b/material/views/views.xml
@@ -1,60 +1,60 @@
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="material.list">
-      <field name="name">material list</field>
-      <field name="model">material.material</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
--->
+    <data>
+        <!-- explicit list view definition -->
 
-    <!-- actions opening views on models -->
-<!--
-    <record model="ir.actions.act_window" id="material.action_window">
-      <field name="name">material window</field>
-      <field name="res_model">material.material</field>
-      <field name="view_mode">tree,form</field>
-    </record>
--->
+        <record model="ir.ui.view" id="material.list">
+            <field name="name">material list</field>
+            <field name="model">material.material</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name" />
+                    <field name="code" />
+                    <field name="type" />
+                    <field name="buy_price" />
+                    <field name="supplier_id" />
+                </tree>
+            </field>
+        </record>
 
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="material.action_server">
-      <field name="name">material server</field>
-      <field name="model_id" ref="model_material_material"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
 
-    <!-- Top menu item -->
-<!--
-    <menuitem name="material" id="material.menu_root"/>
--->
-    <!-- menu categories -->
-<!--
-    <menuitem name="Menu 1" id="material.menu_1" parent="material.menu_root"/>
-    <menuitem name="Menu 2" id="material.menu_2" parent="material.menu_root"/>
--->
-    <!-- actions -->
-<!--
-    <menuitem name="List" id="material.menu_1_list" parent="material.menu_1"
-              action="material.action_window"/>
-    <menuitem name="Server to list" id="material" parent="material.menu_2"
-              action="material.action_server"/>
--->
-  </data>
+        <!-- actions opening views on models -->
+
+        <record model="ir.actions.act_window" id="material.action_window">
+            <field name="name">material window</field>
+            <field name="res_model">material.material</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+
+        <!-- server action to the one above -->
+
+        <record model="ir.actions.server" id="material.action_server">
+            <field name="name">material server</field>
+            <field name="model_id" ref="model_material_material" />
+            <field name="state">code</field>
+            <field name="code">
+                action = {
+                    "type": "ir.actions.act_window",
+                    "view_mode": "tree,form",
+                    "res_model": model._name,
+                }
+            </field>
+        </record>
+
+
+        <!-- Top menu item -->
+
+        <menuitem name="Material" id="material.menu_root" />
+
+        <!-- menu categories -->
+
+        <menuitem name="Material" id="material.menu_material_window" parent="material.menu_root" action="material.action_window"/>
+        <menuitem name="Material List" id="material.menu_material_server" parent="material.menu_root" action="material.action_server"/>
+
+        <!-- actions -->
+
+        <!-- <menuitem name="List" id="material.menu_1_list" parent="material.menu_1" action="material.action_window" />
+        <menuitem name="Server to list" id="material" parent="material.menu_2" action="material.action_server" /> -->
+
+    </data>
 </odoo>
