--- a/material/views/views.xml
+++ b/material/views/views.xml
@@ -10,7 +10,7 @@
                     <field name="name" />
                     <field name="code" />
                     <field name="type" />
-                    <field name="buy_price" />
+                    <field name="buy_price" widget="monetary" options="{'currency_field': 'currency_id'}" />
                     <field name="supplier_id" />
                 </tree>
             </field>
@@ -28,7 +28,7 @@
                             <field name="type" required="1" />
                         </group>
                         <group>
-                            <field name="buy_price" required="1" />
+                            <field name="buy_price" required="1" widget="monetary" options="{'currency_field': 'currency_id'}" />
                             <field name="supplier_id" required="1" />
                         </group>
                     </sheet>
@@ -37,30 +37,33 @@
         </record>
 
 
-        <!-- actions opening views on models -->
-
-        <record model="ir.actions.act_window" id="material.action_window">
-            <field name="name">material window</field>
-            <field name="res_model">material.material</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-
-
-        <!-- server action to the one above -->
-
-        <record model="ir.actions.server" id="material.action_server">
-            <field name="name">material server</field>
-            <field name="model_id" ref="model_material_material" />
-            <field name="state">code</field>
-            <field name="code">
-                action = {
-                    "type": "ir.actions.act_window",
-                    "view_mode": "tree,form",
-                    "res_model": model._name,
-                }
+        <record id="material.material_search" model="ir.ui.view">
+            <field name="name">material search</field>
+            <field name="model">material.material</field>
+            <field name="arch" type="xml">
+                <search string="Material">
+                    <filter string="Fabric" name="filter_fabric" domain="[('type', '=', 'fabric')]" />
+                    <filter string="Jeans" name="filter_jeans" domain="[('type', '=', 'jeans')]" />
+                    <filter string="Cotton" name="filter_cotton" domain="[('type', '=', 'cotton')]" />
+                    <separator />
+                    <field name="type" />
+                    <field name="supplier_id" />
+                    <group expand="1" string="Group By">
+                        <filter string="Supplier" name="group_supplier" context="{'group_by':'supplier_id'}" />
+                    </group>
+                </search>
             </field>
         </record>
 
+
+        <!-- actions opening views on models -->
+
+        <record model="ir.actions.act_window" id="material.action_window">
+            <field name="name">Material Window</field>
+            <field name="res_model">material.material</field>
+            <field name="view_mode">tree,form</field>
+            <field name="search_view_id" ref="material.material_search" />
+        </record>
 
         <!-- Top menu item -->
 
@@ -69,12 +72,7 @@
         <!-- menu categories -->
 
         <menuitem name="Material" id="material.menu_material_window" parent="material.menu_root" action="material.action_window" />
-        <menuitem name="Material List" id="material.menu_material_server" parent="material.menu_root" action="material.action_server" />
 
-        <!-- actions -->
-
-        <!-- <menuitem name="List" id="material.menu_1_list" parent="material.menu_1" action="material.action_window" />
-        <menuitem name="Server to list" id="material" parent="material.menu_2" action="material.action_server" /> -->
 
     </data>
 </odoo>
